Basic first screen + simplify showcase

--- a/app/data/screens/buttons.kv
+++ b/app/data/screens/buttons.kv
@@ -1,24 +1,24 @@
 ShowcaseScreen:
     name: 'Buttons'
 
-    Button:
+    HeartfeltHellosButton:
         size_hint_y: None
         height: '48dp'
         text: 'Button normal'
 
-    Button:
+    HeartfeltHellosButton:
         size_hint_y: None
         height: '48dp'
         text: 'Button down'
         state: 'down'
 
-    Button:
+    HeartfeltHellosButton:
         size_hint_y: None
         height: '48dp'
         text: 'Button disabled'
         disabled: True
 
-    Button:
+    HeartfeltHellosButton:
         size_hint_y: None
         height: '48dp'
         text: 'Button down disabled'
