--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -2,37 +2,19 @@
 #:import KivyLexer kivy.extras.highlight.KivyLexer
 #:import Factory kivy.factory.Factory
 
-<ActionSpinnerOptions@SpinnerOption>
-    background_color: .4, .4, .4, 1
-
-<ActionSpinner@Spinner+ActionItem>
-    canvas.before:
-        Color:
-            rgba: 0.128, 0.128, 0.128, 1
-        Rectangle:
-            size: self.size
-            pos: self.pos
-    border: 27, 20, 12, 12
-    background_normal: 'atlas://data/images/defaulttheme/action_group'
-    option_cls: Factory.ActionSpinnerOptions
-
-<ActionDropdown>:
-    on_size: self.width = '220dp'
-
 <ShowcaseScreen>:
     ScrollView:
         do_scroll_x: False
-        do_scroll_y: False if root.fullscreen else (content.height > root.height - dp(16))
+        do_scroll_y: content.height > root.height - dp(16)
         AnchorLayout:
-            size_hint_y: None
-            height: root.height if root.fullscreen else max(root.height, content.height)
+            height: max(root.height, content.height)
             GridLayout:
                 id: content
                 cols: 1
                 spacing: '8dp'
                 padding: '8dp'
-                size_hint: (1, 1) if root.fullscreen else (.8, None)
-                height: self.height if root.fullscreen else self.minimum_height
+                size_hint: (.8, None)
+                height: self.minimum_height
 
 
 BoxLayout:
