--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -35,16 +35,16 @@ BoxLayout:
                 with_previous: (False if sm.current_screen.name == 'button' else True) if sm.current_screen else False
                 title: '' if not app.current_title else app.current_title
 
-#            ActionButton:
-#                text: 'Previous screen'
-#                icon: 'data/icons/chevron-left.png'
-#                on_release: app.go_previous_screen()
-#
-#            ActionButton:
-#                text: 'Next screen'
-#                icon: 'data/icons/chevron-right.png'
-#                on_release: app.go_next_screen()
-#                important: True
+            ActionButton:
+                text: 'Previous screen'
+                icon: 'data/icons/chevron-left.png'
+                on_release: app.go_previous_screen()
+
+            ActionButton:
+                text: 'Next screen'
+                icon: 'data/icons/chevron-right.png'
+                on_release: app.go_next_screen()
+                important: True
 
     ScreenManager:
         id: sm
