--- a/app/data/screens/test_idea_screen.kv
+++ b/app/data/screens/test_idea_screen.kv
@@ -6,5 +6,6 @@ IdeaScreen:
     # Holds Ideas
     BoxLayout:
         orientation: 'vertical'
-        cols: 1
+        spacing: '20dp'
+        height: 500
         id: Test
