--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -5,10 +5,10 @@ ShowcaseScreen:
 
     HeartfeltHellosButton:
         size_hint_y: None
-        height: '128dp'
+        height: 128
         text: 'Create from Scratch'
 
     HeartfeltHellosButton:
         size_hint_y: None
-        height: '128dp'
+        height: 128
         text: 'Create from Contact'
