title screen done

--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -2,7 +2,15 @@
 
 ShowcaseScreen:
     name: 'Title_Screen'
+    
+    Label:
+        text: "Let's Reconnect!"
+        font_size:60
+        color: 0, 0, 0
 
     Label:
-        text: "Title Screen"
+        text: "What type conversation ideas do you want?" 
+        font_size:40
+        halign:"center"
+        text_size: cm(8), cm(7)
         color: 0, 0, 0
