--- a/app/data/screens/friend_list.kv
+++ b/app/data/screens/friend_list.kv
@@ -1,8 +1,4 @@
-#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_button
+#:import SubIdeaScreen app.data.screen_types.friend_list_screen
 
-ShowcaseScreen:
+FriendScreen:
     title: "Friend_List"
-
-    Label:
-        text: "Friend List"
-        color: 0, 0, 0
