--- a/app/data/screens/friend_creation_steps.kv
+++ b/app/data/screens/friend_creation_steps.kv
@@ -1,8 +1,4 @@
-#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_button
+#:import SubIdeaScreen app.data.screen_types.friend_creation_screen
 
-ShowcaseScreen:
+FriendCreationScreen:
     title: "Friend_Creation_Steps"
-
-    Label:
-        text: "Friend Creation Steps"
-        color: 0, 0, 0
