--- a/app/data/screens/create_post.kv
+++ b/app/data/screens/create_post.kv
@@ -1,8 +1,5 @@
-#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_button
+#:import SubIdeaScreen app.data.screen_types.idea_creation_screen
 
-ShowcaseScreen:
+IdeaCreationScreen:
     title: "Create_Post"
 
-    Label:
-        text: "Create Post"
-        color: 0, 0, 0
