Going back, improving idea screens

--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -2,6 +2,9 @@
 
 ShowcaseScreen:
     name: 'Create_Person_Options'
+    display_name: "Create Friend Profile"
+
+    previous_screen: "Friend_List"
 
     HeartfeltHellosButton:
         size_hint_y: None
