--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -2,6 +2,7 @@
 
 ShowcaseScreen:
     name: 'Title_Screen'
+    display_name: "Heartfelt Hellos"
     
     Label:
         text: "Let's Reconnect!"
