--- a/app/data/screens/sub_idea_screen.kv
+++ b/app/data/screens/sub_idea_screen.kv
@@ -2,3 +2,6 @@
 
 SubIdeaScreen:
     name: 'Sub_Idea_Screen'
+    display_name: "Choose a Follow-Up"
+
+    previous_screen: "Idea_Share_Rate_Screen"
