Split up friend creation screen

--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -10,8 +10,10 @@ ShowcaseScreen:
         size_hint_y: None
         height: 128
         text: 'Create from Scratch'
+        on_press: app.go_screen("Friend_Creation_First_Step", "left")
 
     HeartfeltHellosButton:
         size_hint_y: None
         height: 128
         text: 'Create from Contact'
+        on_press: app.go_screen("Contact_List", "left")
