--- a/app/data/screens/deprecated/friend_creation_steps.kv
+++ b/app/data/screens/deprecated/friend_creation_steps.kv
@@ -2,5 +2,6 @@
 
 FriendCreationScreen:
     title: "Friend_Creation_Steps"
-
     display_name: "Create Friend Profile"
+
+    previous_screen: "Create_Person_Options"
