Split up idea creation

--- a/app/data/screens/deprecated/create_post.kv
+++ b/app/data/screens/deprecated/create_post.kv
@@ -1,5 +1,6 @@
 #:import SubIdeaScreen app.data.screen_types.idea_creation_screen
 
 IdeaCreationScreen:
-    title: "Create_Post"
+    name: "Create_Post"
+    display_name: "Create Post"
 
