Luis updated michael_screen.kv

--- a/app/data/screens/michael_screen.kv
+++ b/app/data/screens/michael_screen.kv
@@ -1,6 +1,6 @@
 #:import HeartfeltHellosButton app.widgets.heartfelt_hellos_button
 
-MichaelScreen:
+ShowcaseScreen:
     name: 'Michael_Screen'
     display_name: 'Michael'
 
