Integrate friend tag screen

--- a/app/data/screens/friend_list.kv
+++ b/app/data/screens/friend_list.kv
@@ -1,4 +1,4 @@
-#:import SubIdeaScreen app.data.screen_types.friend_list_screen
+#:import FriendScreen app.data.screen_types.friend_list_screen
 
 FriendScreen:
     title: "Friend_List"
