Some button changes

--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -30,11 +30,11 @@ BoxLayout:
         size_hint_y: 0.1
 
         HeartfeltHellosButton:
-            text: "Back" if app.have_back_button else ""
+            text: "Go\nBack" if app.have_back_button else ""
             size_hint_x: 0.3
             background_color: (0.6, 0.6, 0.6)
             color: (0, 0.5, 1) if app.have_back_button else (0, 0, 0, 0)
-            font_size: 36
+            font_size: 30
             on_release: app.on_back_pressed() if app.have_back_button else None
 
         HeartfeltHellosButton:
@@ -44,11 +44,11 @@ BoxLayout:
             on_release: app.go_next_screen()
 
         HeartfeltHellosButton:
-            text: "Home" if app.have_home_button else ""
+            text: "Go\nHome" if app.have_home_button else ""
             size_hint_x: 0.3
             background_color: (0.6, 0.6, 0.6)
             color: (0, 0.5, 1) if app.have_back_button else (0, 0, 0, 0)
-            font_size: 36
+            font_size: 30
             on_release: app.go_screen("Title_Screen", "right") if app.have_home_button else None
 
     ScreenManager:
@@ -58,11 +58,11 @@ BoxLayout:
         size_hint_y: 0.1
 
         HeartfeltHellosButton:
-            text: 'General Ideas'
-            font_size: 36
+            text: 'Find\nGeneral Ideas'
+            font_size: 30
             on_release: app.go_screen("General_Idea_Screen", "right")
 
         HeartfeltHellosButton:
-            text: 'Friend Ideas'
-            font_size: 36
+            text: 'Find\nFriend Ideas'
+            font_size: 30
             on_release: app.go_screen("Friend_List", "left")
