Transition from michael screen to idea screen

--- a/app/data/screens/user_idea_screen.kv
+++ b/app/data/screens/user_idea_screen.kv
@@ -4,4 +4,4 @@ UserIdeaScreen:
     name: 'User_Idea_Screen'
     display_name: "Choose an Idea"
 
-    previous_screen: "Friend_List"
+    previous_screen: "Michael_Screen"
