Luis Updated contact_list.kv

--- a/app/data/screens/contact_list.kv
+++ b/app/data/screens/contact_list.kv
@@ -1,84 +1,5 @@
-#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_button
+#:import ContactList app.data.screen_types.contact_screen
 
-ShowcaseScreen:
+ContactList:
     name: 'Contact_List'
     display_name: "Contacts"
-
-    BoxLayout:
-        orientation: 'vertical'
-
-        TextInput:
-            hint_text: 'Search'
-            size_hint_y: None
-            height: '48dp'
-            multiline: False
-        
-        # NEEDS scroll view or adjustments
-        BoxLayout:
-            orientation: 'vertical'
-            size_hint_y: None
-            height: self.minimum_height
-
-            Label:
-                text: 'A'
-                size_hint_y: None
-                height: '30dp'
-            Widget:
-                size_hint_y: None
-                height: '2dp'
-                canvas.before:
-                    Color:
-                        rgba: 0, 0, 0, 1
-                    Rectangle:
-                        size: self.size
-                        pos: self.pos
-            Button:
-                text: 'Abby'
-                size_hint_y: None
-                height: '50dp'
-            Button:
-                text: 'Astra'
-                size_hint_y: None
-                height: '50dp'
-
-            # Repeat
-
-            Label:
-                text: 'B'
-                size_hint_y: None
-                height: '30dp'
-            Widget:
-                size_hint_y: None
-                height: '2dp'
-                canvas.before:
-                    Color:
-                        rgba: 0, 0, 0, 1
-                    Rectangle:
-                        size: self.size
-                        pos: self.pos
-            Button:
-                text: 'Ben from Khoury'
-                size_hint_y: None
-                height: '50dp'
-
-            Label:
-                text: 'M'
-                size_hint_y: None
-                height: '30dp'
-            Widget:
-                size_hint_y: None
-                height: '2dp'
-                canvas.before:
-                    Color:
-                        rgba: 0, 0, 0, 1
-                    Rectangle:
-                        size: self.size
-                        pos: self.pos
-            Button:
-                text: 'Michael'
-                size_hint_y: None
-                height: '50dp'
-            Button:
-                text: 'Mom'
-                size_hint_y: None
-                height: '50dp'
