dp size changes

--- a/app/data/screens/create_person_options.kv
+++ b/app/data/screens/create_person_options.kv
@@ -8,12 +8,14 @@ ShowcaseScreen:
 
     HeartfeltHellosButton:
         size_hint_y: None
-        height: 128
-        text: 'Create from Scratch'
+        halign: "center"
+        height: "128dp"
+        text: 'Create from\nScratch'
         on_press: app.go_screen("Friend_Creation_First_Step", "left")
 
     HeartfeltHellosButton:
         size_hint_y: None
-        height: 128
-        text: 'Create from Contact'
+        halign: "center"
+        height: "128dp"
+        text: 'Create from\nContact'
         on_press: app.go_screen("Contact_List", "left")
