--- a/app/data/screens/michael_screen.kv
+++ b/app/data/screens/michael_screen.kv
@@ -13,7 +13,7 @@ MichaelScreen:
 #            text: 'Michael'
 #            size_hint_y: None
 #            height: '60dp'
-#            font_size: '32sp'
+#            font_size: '32dp'
 #
 #        Label:
 #            text: '__________________'
