--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -6,12 +6,14 @@ ShowcaseScreen:
     
     Label:
         text: "Let's Reconnect!"
-        font_size:60
+        font_size:"45dp"
+        valign:"middle"
         color: 0, 0, 0
 
     Label:
-        text: "What type conversation ideas do you want?" 
-        font_size:40
+        text: "\n\n\n\nWhat type of conversation ideas do you want?" 
+        font_size:"35dp"
+        valign:"middle"
         halign:"center"
-        text_size: cm(8), cm(7)
+        text_size: cm(9), None
         color: 0, 0, 0
