--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -31,7 +31,7 @@ BoxLayout:
 
         HeartfeltHellosButton:
             text: "Go\nBack" if app.have_back_button else ""
-            size_hint_x: 0.3
+            size_hint_x: "0.3dp"
             halign: "center"
             background_color: (0.6, 0.6, 0.6)
             color: (0, 0.5, 1) if app.have_back_button else (0, 0, 0, 0)
