--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -6,12 +6,14 @@ ShowcaseScreen:
     
     Label:
         text: "Let's Reconnect!"
+        font_name:"Raleway"
         font_size:"45dp"
         valign:"middle"
         color: 0, 0, 0
 
     Label:
         text: "\n\n\n\nWhat type of conversation ideas do you want?" 
+        font_name:"Raleway"
         font_size:"35dp"
         valign:"middle"
         halign:"center"
