--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -49,7 +49,7 @@ BoxLayout:
             size_hint_x: 0.3
             halign: "center"
             background_color: (0.6, 0.6, 0.6)
-            color: (0, 0.5, 1) if app.have_back_button else (0, 0, 0, 0)
+            color: (0, 0.5, 1) if app.have_home_button else (0, 0, 0, 0)
             font_size: 30
             on_release: app.go_screen("Title_Screen", "right") if app.have_home_button else None
 
