text wrapping fixed? (maybe)

--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -1,17 +1,18 @@
-#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_button
+#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_label
 
 ShowcaseScreen:
     name: 'Title_Screen'
     display_name: "Heartfelt Hellos"
     
-    Label:
+    HeartfeltHellosLabel:
         text: "Let's Reconnect!"
         font_name:"Raleway"
         font_size:"45dp"
         valign:"middle"
+        text_size: None, None
         color: 0, 0, 0
 
-    Label:
+    HeartfeltHellosLabel:
         text: "\n\n\n\nWhat type of conversation ideas do you want?" 
         font_name:"Raleway"
         font_size:"35dp"
