title screen fixed

--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -1,22 +1,23 @@
-#:import HeartfeltHellosButton app.widgets.heartfelt_hellos_label
+
 
 ShowcaseScreen:
     name: 'Title_Screen'
     display_name: "Heartfelt Hellos"
     
-    HeartfeltHellosLabel:
+    Label:
         text: "Let's Reconnect!"
         font_name:"Raleway"
         font_size:"45dp"
+        halign:"center"
         valign:"middle"
-        text_size: None, None
+        text_size: dp(400), None
         color: 0, 0, 0
 
-    HeartfeltHellosLabel:
+    Label:
         text: "\n\n\n\nWhat type of conversation ideas do you want?" 
         font_name:"Raleway"
         font_size:"35dp"
         valign:"middle"
         halign:"center"
-        text_size: cm(9), None
+        text_size: dp(400), None
         color: 0, 0, 0
