--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -28,31 +28,38 @@ BoxLayout:
     BoxLayout:
         orientation: 'horizontal'
         size_hint_y: 0.1
+        halign:"center"
 
         HeartfeltHellosButton:
-            text: "Go\nBack" if app.have_back_button else ""
+            text: "Go Back" if app.have_back_button else ""
+            font_name: "Raleway"
             size_hint_x: "0.3dp"
             halign: "center"
+            text_size:dp(80), None
+
             background_color: (0.6, 0.6, 0.6)
             color: (0, 0.5, 1) if app.have_back_button else (0, 0, 0, 0)
-            font_size: 30
+            font_size: "22dp"
             on_release: app.on_back_pressed() if app.have_back_button else None
 
         HeartfeltHellosButton:
             background_color: 0.6, 0.6, 0.6
             text: app.current_title
             font_name: "Raleway"
-            font_size: 36
+            halign: "center"
+            text_size:dp(200), None
+            font_size: "25dp"
             on_release: app.go_next_screen()
 
         HeartfeltHellosButton:
-            text: "Go\nHome" if app.have_home_button else ""
+            text: "Go Home" if app.have_home_button else ""
             font_name: "Raleway"
-            size_hint_x: 0.3
+            size_hint_x: "0.3dp"
             halign: "center"
+            text_size:dp(80), None
             background_color: (0.6, 0.6, 0.6)
             color: (0, 0.5, 1) if app.have_home_button else (0, 0, 0, 0)
-            font_size: 30
+            font_size: "22dp"
             on_release: app.go_screen("Title_Screen", "right") if app.have_home_button else None
 
     ScreenManager:
@@ -68,10 +75,11 @@ BoxLayout:
                 size: self.size
 
         HeartfeltHellosButton:
-            text: 'Find\nGeneral Ideas'
+            text: 'Find General Ideas'
             font_name: "Raleway"
             halign: "center"
-            font_size: 30
+            text_size:dp(150), None
+            font_size: "23dp"
             on_release: app.go_screen("General_Idea_Screen", "right")
 
         Widget:
@@ -86,8 +94,9 @@ BoxLayout:
                     width: 1.01
 
         HeartfeltHellosButton:
-            text: 'Find\nFriend Ideas'
+            text: 'Find Friend Ideas'
             font_name: "Raleway"
             halign: "center"
-            font_size: 30
+            text_size:dp(150), None
+            font_size: "23dp"
             on_release: app.go_screen("Friend_List", "left")
