simplifying code for previous bugfix

--- a/app/data/screens/title_screen.kv
+++ b/app/data/screens/title_screen.kv
@@ -3,6 +3,9 @@
 ShowcaseScreen:
     name: 'Title_Screen'
     display_name: "Heartfelt Hellos"
+
+    previous_screen: ""
+
     
     Label:
         text: "Let's Reconnect!"
