--- a/app/data/screens/friend_creation_first_step.kv
+++ b/app/data/screens/friend_creation_first_step.kv
@@ -4,3 +4,5 @@ FriendCreationScreenFirstStep:
     title: "Friend_Creation_First_Step"
     display_name: "Create Friend Profile"
 
+    previous_screen: "Create_Person_Options"
+
