change color to blue

--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -37,13 +37,13 @@ BoxLayout:
             halign: "center"
             text_size:dp(80), None
 
-            background_color: (0.6, 0.6, 0.6)
+            background_color: (.678, .847, 0.902)
             color: (0, 0.5, 1) if app.have_back_button else (0, 0, 0, 0)
             font_size: "22dp"
             on_release: app.on_back_pressed() if app.have_back_button else None
 
         HeartfeltHellosButton:
-            background_color: 0.6, 0.6, 0.6
+            background_color: (.678, .847, 0.902)
             text: app.current_title
             font_name: "Raleway"
             halign: "center"
@@ -56,7 +56,7 @@ BoxLayout:
             size_hint_x: "0.3dp"
             halign: "center"
             text_size:dp(80), None
-            background_color: (0.6, 0.6, 0.6)
+            background_color: (.678, .847, 0.902)
             color: (0, 0.5, 1) if app.have_home_button else (0, 0, 0, 0)
             font_size: "22dp"
             on_release: app.go_screen("Title_Screen", "right") if app.have_home_button else None
