--- a/app/showcase.kv
+++ b/app/showcase.kv
@@ -42,13 +42,23 @@ BoxLayout:
             font_size: "22dp"
             on_release: app.on_back_pressed() if app.have_back_button else None
 
-        HeartfeltHellosButton:
-            background_color: (.678, .847, 0.902)
+        Label:
+            
             text: app.current_title
             font_name: "Raleway"
             halign: "center"
             text_size:dp(175), None
             font_size: "23dp"
+            color: (0,0,0)
+            canvas.before:
+                Color: 
+                    rgba: 
+                        (.678, .847, 0.902,1)
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+            
+
 
         HeartfeltHellosButton:
             text: "Go Home" if app.have_home_button else ""
