iMessages name change

--- a/app/data/screens/message_screen.kv
+++ b/app/data/screens/message_screen.kv
@@ -2,7 +2,7 @@
 
 MessageScreen:
     name: 'Message_Screen'
-    display_name: "Messages"
+    display_name: "iMessages"
 
     previous_screen: "Idea_Share_Rate_Screen"
 
