--- a/app/data/screens/michael_screen.kv
+++ b/app/data/screens/michael_screen.kv
@@ -2,7 +2,7 @@
 
 MichaelScreen:
     name: 'Michael_Screen'
-    display_name: 'Michael'
+    #display_name: 'Michael'
 
     previous_screen: "Friend_List"
 
